--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "lint": "eslint",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "dev": "babel-node -- ./node_modules/.bin/micro-dev services --ignore='__tests__|services/www'"
   },
   "husky": {
     "hooks": {
@@ -27,9 +28,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
+    "@emotion/babel-preset-css-prop": "^10.0.9",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -40,7 +49,19 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
+    "less": "^3.9.0",
     "lint-staged": "^8.1.5",
+    "micro-dev": "^3.0.0",
     "prettier": "^1.16.4"
+  },
+  "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^3.15.2",
+    "micro": "^9.3.3",
+    "next": "^8.0.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
