--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "scripts": {
     "lint": "eslint",
     "test": "jest",
-    "dev": "babel-node -- ./node_modules/.bin/micro-dev services --ignore='__tests__|services/www'"
+    "dev": "babel-node -- ./node_modules/.bin/micro-dev services --ignore='__tests__|services/www'",
+    "build:services": "webpack --config internal/webpack.production.js",
+    "build:www": "next build services/www && cpx \"services/www/.next/**\" .build/.next && cpx \".build/.next/static/**\" .build/public/_next/static && cpx \"services/www/static/**\" .build/public/static && cpx \".build/.next/service-worker.js\" .build/public",
+    "build": "concurrently yarn:build:* && cpx \"*{package.json,yarn.lock}\" .build"
   },
   "husky": {
     "hooks": {
@@ -37,8 +40,11 @@
     "@commitlint/config-conventional": "^7.5.0",
     "@emotion/babel-preset-css-prop": "^10.0.9",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "concurrently": "^4.1.0",
+    "cpx": "^1.5.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -53,7 +59,10 @@
     "lint-staged": "^8.1.5",
     "micro-dev": "^3.0.0",
     "prettier": "^1.16.4",
-    "test-listen": "^1.1.0"
+    "test-listen": "^1.1.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@emotion/core": "^10.0.10",
@@ -61,9 +70,14 @@
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.15.2",
     "axios": "^0.18.0",
+    "firebase-admin": "^7.2.0",
+    "firebase-functions": "^2.2.1",
     "micro": "^9.3.3",
     "next": "^8.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "peerDependencies": {
+    "firebase-tools": "^6.5.0"
   }
 }
