--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "axios": "^0.18.0",
     "firebase-admin": "^7.2.0",
     "firebase-functions": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "micro": "^9.3.3",
     "next": "^8.0.3",
     "react": "^16.8.6",
